--- a/SimpleLoginPage/login.css
+++ b/SimpleLoginPage/login.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
+body{
+    height: 100vh;
+}
 .login-form{
     display: flex;
     flex-direction: column;
@@ -5,8 +12,8 @@
 
 .login-form > *{
     position: relative;
-    left: 35%;
-    margin: 10px;
+    left: 34%;
+    margin: 8px;
     width: 30%;
     padding: 5px;
 }
@@ -17,17 +24,15 @@
 
 #log-in{
     position: relative;
-    left: 38%;
+    left: 33%;
     margin: 15px;
     padding: 10px;
-    width: 10%;
-    color: blue;
+    width: 15%;
 }
 #create-acc{
     position: relative;
-    left: 38%;
+    left: 33%;
     margin: 15px;
     padding: 10px;
-    width: 10%;
-    color: blue;
+    width: 15%;
 }
